@@ -1,3 +1,12 @@
+2005-04-28  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Check for hard-linked directories in lookup.  This could cause
+	problems in the VFS, which assumes that such objects never exist.
+
+	* Make checking of permission for other users more strict.  Now
+	the same privilege is required for the mount owner as for ptrace
+	on the process performing the filesystem operation.
+	
 2005-04-23  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.3-pre5
